2025-01-30T12:40:44Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13052546972 # 790
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-30
* notice: last 14d: unq all: 18 59
* notice: prev accum: outdated-unq outdated-all / unq all: 947 4945 / 965 5022
* notice: next accum: outdated-unq outdated-all / unq all: 948 4969 / 966 5028
* notice: prev exec diff / last date diff / accum: unq all: +1 +6 -0 -0 / +1 +6 -0 -0 / 1 6
* notice: removed / changed dates: [2025-01-16] / [2025-01-30]

2025-01-30T01:38:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13043962997 # 789
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-30
* notice: last 14d: unq all: 18 77
* notice: prev accum: outdated-unq outdated-all / unq all: 947 4945 / 964 5021
* notice: next accum: outdated-unq outdated-all / unq all: 947 4945 / 965 5022
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2025-01-29]

2025-01-29T12:39:46Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13031519414 # 788
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-29
* notice: last 14d: unq all: 17 76
* notice: prev accum: outdated-unq outdated-all / unq all: 947 4945 / 963 5019
* notice: next accum: outdated-unq outdated-all / unq all: 947 4945 / 964 5021
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2025-01-29]

2025-01-29T01:40:18Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13022984515 # 787