@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-01-30T12:40:44Z",
-  "count_outdated" : 4969,
-  "uniques_outdated" : 948,
-  "count" : 5028,
-  "uniques" : 966,
+  "timestamp" : "2025-02-01T01:45:15Z",
+  "count_outdated" : 4973,
+  "uniques_outdated" : 951,
+  "count" : 5029,
+  "uniques" : 967,
   "views" : [
-    {
-      "timestamp": "2025-01-17T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 4 ],
-      "count_decinc": [ 0, 4 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 3 ],
-      "uniques_decinc": [ 0, 3 ]
-    },
     {
       "timestamp": "2025-01-19T00:00:00Z",
       "count": 25,
@@ -73,6 +64,15 @@
       "count": 6,
       "count_minmax": [ 6, 6 ],
       "count_decinc": [ 0, 6 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-01-31T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
