@@ -1,12 +1,7 @@
 {
-  "count": 59,
-  "uniques": 18,
+  "count": 56,
+  "uniques": 16,
   "views": [
-    {
-      "timestamp": "2025-01-17T00:00:00Z",
-      "count": 4,
-      "uniques": 3
-    },
     {
       "timestamp": "2025-01-19T00:00:00Z",
       "count": 25,
@@ -40,6 +35,11 @@
     {
       "timestamp": "2025-01-30T00:00:00Z",
       "count": 6,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-01-31T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
